Added TokenManager and changed secret to byte array
Apply suggestion to webapp_backend/src/main/java/pacr/webapp_backend/shared/IAuthenticator.java
Removed AlwaysTrueAuthenticator